--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
 server.port = 80
+spring.devtools.livereload.enabled=true
 
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=test
 spring.datasource.password=1234
+
+#spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
